# coding_agent

./: Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/coding_agent/: main.py
src/coding_agent/config/: agents.yaml  tasks.yaml
