[project]
name = "coding_agent"
version = "0.1.0"
description = "coding-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
    "gradio>=5.46.0",
    "pip-chill>=1.0.3",
    "pipreqs>=0.5.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
coding_agent = "coding_agent.main:run"
run_crew = "coding_agent.main:run"
train = "coding_agent.main:train"
replay = "coding_agent.main:replay"
test = "coding_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["coding_agent"]
